--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./styles/base/_alignments.scss";
+@import "./styles/base/_bootstrapGrid.scss";
+@import "./styles/base/_displays.scss";
+@import "./styles/base/_flexBox.scss";
+@import "./styles/base/_normalize.scss";
+@import "./styles/base/_spacings.scss";
+@import "./styles/base/_backgroundColors.scss";
