--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,4 @@
 @import "./styles/base/_normalize.scss";
 @import "./styles/base/_spacings.scss";
 @import "./styles/base/_backgroundColors.scss";
+@import "./styles/base/_typography.scss";
