login and register page basic setup

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,6 +10,8 @@
     <label class="mt-12">Parool:</label>
     <input  name="password" (keyup)="onInput($event)"/>
       <button class="mt-12" (click)="onLogin()">Login</button>
+      <button (click)="onRegister()">Register</button>
+
     </div>
 </div>
 </div>
