--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,6 @@
 @import "./styles/base/_spacings.scss";
 @import "./styles/base/_backgroundColors.scss";
 @import "./styles/base/_typography.scss";
+@import "./styles/gui/_card-bases.scss";
+@import "./styles/gui/_text-input.scss";
+@import "./styles/gui/_buttons.scss";
