--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,33 @@
-<p>Hello</p>
+<div class="topnav d-flex">
+  <a class="topnavItem" (click)='navigateToHome()'>Home</a>
+  <div class="topnavItem" (click)='navigateToProjects()'>Projects</div>
+</div>
+<div class="p-128">
+  <h2 class="text-center mb-64">Our Angular website</h2>
+  <h3 class="text-center">Database data</h3>
+  <div class="d-flex justify-content-center">
+    <table id="products">
+      <caption>Database data</caption>
+      <tr>
+        <th class="px-16">
+          id
+        </th>
+        <th class="px-16">
+          firstname
+        </th>
+        <th class="px-16 text-right">
+          idcode
+        </th>
+        <th class="px-16">
+          roleId
+        </th>
+      </tr>
+      <tr *ngFor="let employee of allEmployees">
+        <td class="px-16">{{employee.id}}</td>
+        <td class="px-16">{{employee.firstName}}</td>
+        <td class="px-16">{{employee.idCode}}</td>
+        <td class="px-16">{{employee.roleId}}</td>
+      </tr>
+    </table>
+  </div>
+</div>
