--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,29 +1,10 @@
-<div class="p-128 background-gray-accent-1">
-  <h2 class="text-center mb-64">Our Angular website</h2>
-  <h3 class="text-center">Database data</h3>
-  <div class="d-flex justify-content-center">
-    <table id="products">
-      <caption>Database data</caption>
-      <tr>
-        <th class="px-16">
-          id
-        </th>
-        <th class="px-16">
-          firstname
-        </th>
-        <th class="px-16 text-right">
-          idcode
-        </th>
-        <th class="px-16">
-          roleId
-        </th>
-      </tr>
-      <tr *ngFor="let employee of allEmployees">
-        <td class="px-16">{{employee.id}}</td>
-        <td class="px-16">{{employee.firstName}}</td>
-        <td class="px-16">{{employee.idCode}}</td>
-        <td class="px-16">{{employee.roleId}}</td>
-      </tr>
-    </table>
-  </div>
+<div class="topnav d-flex">
+  <a class="topnavItem" (click)='showProjects = false'>Home</a>
+  <div class="topnavItem" (click)='showProjects = true'>Projects</div>
+</div>
+<div *ngIf="!showProjects">
+  <app-home></app-home>
+</div>
+<div *ngIf="showProjects">
+  <app-projects></app-projects>
 </div>
