--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -6,5 +6,5 @@
   <app-home></app-home>
 </div>
 <div *ngIf="navbarItem == 'projects'">
-  <app-projects></app-projects>
+  <app-projects [showProjects]="projects"></app-projects>
 </div>
