--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,3 +1,13 @@
-<div *ngFor="let project of projectsTestData">
-  <p>{{ project.name }}</p>
+<div class="p-128">
+  <div class="d-flex justify-content-center"></div>
+  <table>
+    <tr>
+      <th>Id</th>
+      <th>Title</th>
+    </tr>
+    <tr *ngFor="let project of showProjects">
+      <td>{{ project.id }}</td>
+      <td>{{ project.title }}</td>
+    </tr>
+  </table>
 </div>
