--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,26 +1,18 @@
 @import "src/styles/utils/variables";
 
-
-.topnav {
-  background-color: #333;
-  overflow: hidden;
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
 }
 
-.topnavItem{
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  cursor: pointer;
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
 }
 
-.topnavItem:hover{
-  background-color: #ddd;
-  color: black;
-}
-
-.topnavItem.active{
-  background-color: $brand-secondary-default-accent;
-  color: white;
+tr:nth-child(even) {
+  background-color: #dddddd;
 }
