request quotes from server

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,6 @@
 <div class="p-128">
-  <h2 class="text-center mb-64">Our Angular website</h2>
-  <h3 class="text-center">Database data</h3>
-  <div class="d-flex justify-content-center">
-    <table id="products">
-      <caption>
-        Database data
-      </caption>
-      <tr>
-        <th class="px-16">id</th>
-        <th class="px-16">firstname</th>
-        <th class="px-16 text-right">idcode</th>
-        <th class="px-16">roleId</th>
-      </tr>
-    </table>
+  <div class="d-flex justify-content-center flex-column">
+    <h2 class="m-0">{{ showQuote }}</h2>
+    <h4>{{ showQuoteAuthor }}</h4>
   </div>
 </div>
