--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -11,8 +11,25 @@ th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
+  cursor: pointer;
 }
 
 tr:nth-child(even) {
   background-color: #dddddd;
+}
+
+.border-none {
+  border: none;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.width-100 {
+  width: 100%;
+}
+
+.width-50 {
+  width: 50%;
 }
