project view iimplemented with task creation

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,9 +3,11 @@
 @import "./styles/base/_displays.scss";
 @import "./styles/base/_flexBox.scss";
 @import "./styles/base/_normalize.scss";
+@import "./styles/base/_cursor.scss";
 @import "./styles/base/_spacings.scss";
 @import "./styles/base/_backgroundColors.scss";
 @import "./styles/base/_typography.scss";
+@import "./styles/base/_borders.scss";
 @import "./styles/gui/_card-bases.scss";
 @import "./styles/gui/_text-input.scss";
 @import "./styles/gui/_buttons.scss";
