--- a/src/app/project-view/project-view.component.scss
+++ b/src/app/project-view/project-view.component.scss
@@ -1,17 +1,25 @@
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
+@import "src/styles/utils/variables";
+
+.topnav {
+  background-color: #333;
+  overflow: hidden;
 }
 
-td,
-th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
+.topnavItem {
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
   cursor: pointer;
 }
 
-tr:nth-child(even) {
-  background-color: #dddddd;
+.topnavItem:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnavItem.active {
+  background-color: $brand-secondary-default-accent;
+  color: white;
 }
