#22 website title and labels

--- a/src/app/milestones/milestones.component.html
+++ b/src/app/milestones/milestones.component.html
@@ -13,7 +13,7 @@
       (keyup)="onNewMilestoneInput($event)"
     ></textarea>
   </div>
-  <label>StartDate</label>
+  <label>Start date</label>
   <div>
     <input
       name="startDate"
@@ -23,7 +23,7 @@
     />
   </div>
 
-  <label>StartDate</label>
+  <label>End date</label>
   <div>
     <input
       name="endDate"
@@ -34,7 +34,7 @@
   </div>
 </div>
 <div>
-  <button (click)="addMilestone()">Add task</button>
+  <button (click)="addMilestone()">Add milestone</button>
 </div>
 <input
   name="textInput"
