formate date better

--- a/src/app/milestones/milestones.component.html
+++ b/src/app/milestones/milestones.component.html
@@ -67,10 +67,10 @@
       {{ milestone.description }}
     </td>
     <td>
-      {{ milestone.startDate }}
+      {{ formatted(milestone.startDate) }}
     </td>
     <td>
-      {{ milestone.endDate }}
+      {{ formatted(milestone.endDate) }}
     </td>
     <td>
       <button
