--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -68,7 +68,7 @@
       {{ task.description }}
     </td>
     <td>
-      {{ task.deadline }}
+      {{ formatted(task.deadline) }}
     </td>
     <td>
       {{ task.milestoneId }}
