hide ids from urls

--- a/src/app/milestone-view/milestone-view.component.html
+++ b/src/app/milestone-view/milestone-view.component.html
@@ -48,7 +48,7 @@
               {{ task.description }}
             </td>
             <td>
-              {{ task.deadline }}
+              {{ formatted(task.deadline) }}
             </td>
             <td>
               {{ task.milestoneId }}
