--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -6,6 +6,16 @@
   }
 }
 
+.body-xs {
+  font-size: 10px;
+  line-height: 12px;
+  font-weight: 300;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
 //
 // weight
 //
