--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -10,3 +10,38 @@
 >
   Update project title
 </button>
+<div class="d-flex gap-16">
+  <div *ngFor="let label of labels">
+    <div *ngIf="label.title">
+      <div
+        class="background-{{
+          label.colorCode
+        }} border-radius-16 text-black px-16 pt-16 pb-2"
+      >
+        {{ label.title }}
+        <p
+          class="m-0 mb-16 body-xs underline cursor-pointer"
+          (click)="removeLabel(label.id)"
+        >
+          remove
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="mt-16">
+  <label>Label</label>
+  <div>
+    <input
+      name="labelInput"
+      (keyup)="onLabelInput($event)"
+      placeholder="label"
+    />
+    <select name="labelColor" (click)="onLabelInput($event)">
+      <option *ngFor="let color of colors">
+        {{ color }}
+      </option>
+    </select>
+    <button (click)="addLabel()">Add</button>
+  </div>
+</div>
