--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -98,7 +98,8 @@
             task.deadline,
             task.milestoneId,
             task.statusId,
-            task.assignee
+            task.assignee,
+            task.labels
           )
         "
       >
