--- a/src/app/task-view/task-view.component.html
+++ b/src/app/task-view/task-view.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12">
       <div class="d-flex gap-16">
-        <div *ngFor="let label of labels">
+        <div *ngFor="let label of taskLabels">
           <div *ngIf="label.title != ''">
             <div
               class="background-{{
@@ -60,6 +60,17 @@
               {{ status }}
             </option>
           </select>
+        </div>
+      </div>
+      <div class="mt-16">
+        <label>Labels</label>
+        <div class="d-flex">
+          <select name="label" (change)="changeActiveLabel($event)">
+            <option *ngFor="let label of projectLabels">
+              {{ label.title }}
+            </option>
+          </select>
+          <button (click)="addLabel()">Add label</button>
         </div>
       </div>
       <button
