--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -10,7 +10,7 @@
 >
   Update project title
 </button>
-<div class="d-flex gap-16">
+<div class="d-flex gap-16 mt-16">
   <div *ngFor="let label of labels">
     <div *ngIf="label.title">
       <div
